--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "name": "phenomic-test",
   "homepage": "http://test.test",
   "twitter": "",
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jensic/Phenomic-testing.git"
+  },
   "scripts": {
     "lint:js": "eslint --ignore-path .gitignore --fix .",
     "lint:css": "stylelint \"src/**/*.css\"",
@@ -98,6 +101,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.0",
+    "datocms-client": "^0.3.43",
     "eslint": "^3.7.1",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-react": "^6.4.0",
@@ -105,6 +109,7 @@
     "file-loader": "^0.10.1",
     "history": "^2.0.0",
     "npm-run-all": "^1.7.0",
+    "phenomic": "^0.21.2",
     "postcss-browser-reporter": "^0.4.0",
     "postcss-cssnext": "^2.4.0",
     "postcss-loader": "^1.3.3",
@@ -123,7 +128,15 @@
     "stylelint": "^7.2.0",
     "warning": "^3.0.0",
     "webpack": "^2.3.0",
-    "whatwg-fetch": "^0.11.0",
-    "phenomic": "^0.21.2"
+    "whatwg-fetch": "^0.11.0"
+  },
+  "description": "## Install dependencies",
+  "version": "1.0.0",
+  "main": "postcss.config.js",
+  "dependencies": {},
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Jensic/Phenomic-testing/issues"
   }
 }
